@@ -470,7 +470,7 @@ Admonitions
 Topics, Sidebars, and Rubrics
 `````````````````````````````
 
-.. sidebar:: Sidebar Title
+.. sidebar:: Optional Sidebar Title
    :subtitle: Optional Subtitle
 
    This is a sidebar.  It is for text outside the flow of the main
